Added Teacher UI

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Notes Management</title>
+  <title>Video Cafe</title>
 </head>
-<body style="background-color: rgb(0, 130, 130);">
+<body style="background-color: rgb(248,248,248);">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
